# backend/routes/projects-routes.go
@@ -13,5 +13,8 @@ func ProjectsRoutes(router *gin.Engine) {
 		projects.GET("", controllers.ListProjects)
 		projects.POST("", middleware.AuthRequired(), controllers.CreateProject)
 		projects.GET("/:id", controllers.RetrieveProject)
+		projects.POST("/:id/collaborators", middleware.AuthRequired(), controllers.InviteCollaborator)
+		projects.GET("/invitations", middleware.AuthRequired(), controllers.GetProjectInvitations)
+		projects.POST("/:id/collaborators/invitations/:invitationId/:action", middleware.AuthRequired(), controllers.RespondToProjectInvitation)
 	}
 }
